force-app/main/default/objects/Payroll_Record__c/Payroll_Record__c.object-meta.xml
<CustomObject>
    <description>BOFE Payroll records tied to inspections</description>
    <label>Payroll Record</label>
    <nameField>
        <label>Payroll Period</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payroll Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>