force-app/main/default/objects/Payroll_Record__c/fields/Inspection__c.field-meta.xml
<CustomField>
    <fullName>Inspection__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Inspection to which this set of payroll records is related</description>
    <inlineHelpText>Select the inspection that this set of payroll records is related to.</inlineHelpText>
    <label>Inspection</label>
    <referenceTo>DIR_Inspection__c</referenceTo>
    <relationshipLabel>Payroll Records</relationshipLabel>
    <relationshipName>Payroll_Records</relationshipName>
    <type>Lookup</type>
</CustomField>